spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -93,5 +93,5 @@ font-size: larger;
 opacity: 0.8;
 }
 article{
-  /* padding-left: 5rem; */
+  padding-left: 14rem;
 }
